# OLua

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_project.bat  build_project.sh
api/: base_funcs.olu  co_funcs.olu  dblib.olu  iolib.olu  mathlib.olu  refl.olu  strlib.olu  syslib.olu  tab_funcs.olu  utf8_funcs.olu
api/lua/: olua_ext.lua  olua_refl.lua
doc/: Manual.md  readme.md
src/: OLua.natvis  OLuaMain.cpp
src/Backend/: FuncGenBase.cpp  FuncGenBase.h
src/Backend/LuaPlain/: LPBuiltInFuncInterp.cpp  LPBuiltInFuncInterp.h  LPClassHelper.cpp  LPClassHelper.h  LPClassLib.cpp  LPClassLib.h  LPReflHelper.cpp  LPReflHelper.h  LuaPlainInterp.cpp  LuaPlainInterp.h
src/BuiltIn/: BuiltinLib.cpp  BuiltinLib.h
src/Bundle/: APILoader.cpp  APILoader.h  BuildSetting.cpp  BuildSetting.h  BundleBuilder.cpp  BundleBuilder.h  BundleCommon.cpp  BundleCommon.h  ProjectCollect.cpp  ProjectCollector.h  SourceFile.cpp  SourceFile.h  SymbolLib.cpp  SymbolLib.h
src/Framework/: Action.cpp  Action.h  BatchAction.cpp  BatchAction.h  CmdConfig.cpp  CmdConfig.h  CompileCommon.cpp  CompileCommon.h  CompileMsg.cpp  CompileMsg.h  Env.cpp  Env.h  Logger.cpp  Logger.h  Rtti.cpp  Rtti.h  TextBuilder.cpp  TextBuilder.h  Timer.cpp  Timer.h
src/Framework/Serializer/: TextSerializer.cpp  TextSerializer.h
src/Framework/Stream/: BaseStream.cpp  BaseStream.h  ConsoleStream.cpp  ConsoleStream.h  FileStream.cpp  FileStream.h  MemTextStream.cpp  MemTextStream.h
src/Lex/: Lexer.cpp  Lexer.h  TokenReader.cpp  TokenReader.h
src/Parse/: AstPool.cpp  AstPool.h  Parser.cpp  Parser.h  Parser_Expression.cpp  Parser_Scope.cpp  Parser_Statement.cpp
src/Parse/Ast/: ABase.cpp  ABase.h  ASample.cpp  ASample.h  AstCommon.cpp  AstCommon.h  AstDecl.h  AstInclude.h
src/Parse/Ast/Expression/: AArrayType.cpp  AArrayType.h  ABracketMember.cpp  ABracketMember.h  ACall.cpp  ACall.h  AColonCall.cpp  AColonCall.h  AConstExpr.cpp  AConstExpr.h  AConstructor.cpp  AConstructor.h  ADereferance.cpp  ADereferance.h  ADotMember.cpp  ADotMember.h  AExpr.cpp  AExpr.h  AFuncExpr.cpp  AFuncExpr.h  AFuncType.cpp  AFuncType.h  AIntrinsicType.cpp  AIntrinsicType.h  AMapType.cpp  AMapType.h  ANamedType.cpp  ANamedType.h  ANilableUnwrap.cpp  ANilableUnwrap.h  ANormalCall.cpp  ANormalCall.h  AParentheses.cpp  AParentheses.h  APrimaryExpr.cpp  APrimaryExpr.h  ASelf.cpp  ASelf.h  ASimpleExpr.cpp  ASimpleExpr.h  (+16 more)
src/Parse/Ast/Scope/: AClass.cpp  AClass.h  AClassContructor.cpp  AClassContructor.h  AClassDestructor.cpp  AClassDestructor.h  AClassMember.cpp  AClassMember.h  AClassVar.cpp  AClassVar.h  AEnum.cpp  AEnum.h  AEnumItem.cpp  AEnumItem.h  AInterface.cpp  AInterface.h  AMethod.cpp  AMethod.h  AModifier.cpp  AModifier.h  ANormalMethod.cpp  ANormalMethod.h  ARoot.cpp  ARoot.h  ScopeDecl.h  ScopeInclude.h
src/Parse/Ast/Statement/: AAlias.cpp  AAlias.h  AAssignment.cpp  AAssignment.h  AAttribute.cpp  AAttribute.h  ABlock.cpp  ABlock.h  ABlockStat.cpp  ABlockStat.h  ABreak.cpp  ABreak.h  ACallStat.cpp  ACallStat.h  ADoWhile.cpp  ADoWhile.h  AForList.cpp  AForList.h  AForNum.cpp  AForNum.h  AFuncBody.cpp  AFuncBody.h  AFuncDef.cpp  AFuncDef.h  AGlobal.cpp  AGlobal.h  AGoto.cpp  AGoto.h  AIfStat.cpp  AIfStat.h  ALabel.cpp  ALabel.h  ALocal.cpp  ALocal.h  ARepeat.cpp  ARepeat.h  AReturn.cpp  AReturn.h  AStat.cpp  AStat.h  (+6 more)
src/Semantics/: BuiltinLib.cpp  BuiltinLib.h  CompleteAst.cpp  CompleteAst.h  ContextValidator.cpp  ContextValidator.h  DebugVisitor.cpp  DebugVisitor.h  ImportedScopeGroup.cpp  ImportedScopeGroup.h  ScopeVisitorBase.cpp  ScopeVistorBase.h  SymbolScope.cpp  SymbolScope.h  SymbolTable.cpp  SymbolTable.h  SymbolWalker.cpp  SymbolWalker.h  TypeDerivationVisitor.cpp  TypeDerivationVisitor.h  TypeInfoVisitor.cpp  TypeInfoVisitor.h  VisitStackHelper.h  VisitorBase.cpp  VisitorBase.h
src/Semantics/TypeDesc/: ArrayType.cpp  ArrayType.h  ClassType.cpp  ClassType.h  ConstructorType.cpp  ConstructorType.h  EnumType.cpp  EnumType.h  FuncSigniture.cpp  FuncSigniture.h  InterfaceType.cpp  InterfaceType.h  IntrinsicType.cpp  IntrinsicType.h  MapType.cpp  MapType.h  TupleType.cpp  TupleType.h  TypeAlias.cpp  TypeAlias.h  TypeDescBase.cpp  TypeDescBase.h  VariableParamHolder.cpp  VariableParamHolder.h  VoidHolder.cpp  VoidHolder.h
src/Utls/: Common.h  Defs.h  OLFunc.h  OLHash.h  OLLinkedList.h  OLList.cpp  OLList.h  OLMap.cpp  OLMap.h  OLString.cpp  OLString.h  Pointer.h  Pointer.inl  TextEncoding.cpp  TextEncoding.h  TextExpand.h
test/: GenASTBase.cpp  GenAstGraph.cpp  GenCharTab.cpp  GenDefaultVisitor.cpp  TestBundle.cpp  TestFramework.cpp  TestLexer.cpp  TestLogger.cpp  TestLuaPlain.cpp  TestMacro.cpp  TestMisc.cpp  TestSemantics.cpp  TestStatements.cpp  TestSubexpr.cpp  TestSymbolTable.cpp  TestVisitor.cpp
